Rename `coloumn` to `column`
